# Dune-2000

./: CMakeLists.txt  README.md  assets.yaml  client_main.cpp  editor_main.cpp  install.sh  server_main.cpp  uninstall.sh  x.travis.yml
assets/css/: config.qss  crear.qss  editor.qss  multiplayer.qss  sala.qss
client/: CMakeLists.txt  clientprotocol.cpp  clientprotocol.h  clientqueue.cpp  clientqueue.h  cmsg.cpp  cmsg.h  cmsgatacar.cpp  cmsgatacar.h  cmsgconstruir.cpp  cmsgconstruir.h  cmsgcrearunidad.cpp  cmsgcrearunidad.h  cmsgdestruir.cpp  cmsgdestruir.h  cmsgforcedend.cpp  cmsgforcedend.h  cmsgmover.cpp  cmsgmover.h  partida.cpp  partida.h  thdrawer.cpp  thdrawer.h  threceiver.cpp  threceiver.h  thsender.cpp  thsender.h
client/SDL/: CMakeLists.txt  SDLbuilding.cpp  SDLbuilding.h  SDLbuildings.cpp  SDLbuildings.h  SDLcam.cpp  SDLcam.h  SDLgame.cpp  SDLgame.h  SDLgui.cpp  SDLgui.h  SDLmap.cpp  SDLmap.h  SDLmenu.cpp  SDLmenu.h  SDLmenuicon.cpp  SDLmenuicon.h  SDLsound.cpp  SDLsound.h  SDLunit.cpp  SDLunit.h  SDLunits.cpp  SDLunits.h
client/SDL/buildings/: SDLAirTrap.cpp  SDLAirTrap.h  SDLBarracks.cpp  SDLBarracks.h  SDLConstructionYard.cpp  SDLConstructionYard.h  SDLHeavyFactory.cpp  SDLHeavyFactory.h  SDLLightFactory.cpp  SDLLightFactory.h  SDLPalace.cpp  SDLPalace.h  SDLRefinery.cpp  SDLRefinery.h  SDLSpiceSilo.cpp  SDLSpiceSilo.h
client/SDL2pp/: CMakeLists.txt  Makefile  cmake_install.cmake
client/clases/: YAMLbuilding.cpp  YAMLbuilding.h  YAMLunit.cpp  YAMLunit.h  config.cpp  config.h
client/setupscreen/: CMakeLists.txt  conectServer.cpp  conectServer.h  menuMultiPlayer.cpp  menuMultiPlayer.h  playerReproductor.cpp  playerReproductor.h  salaCrear.cpp  salaCrear.h  salaUnirse.cpp  salaUnirse.h  setupscreen.cpp  setupscreen.h
common/: CMakeLists.txt  accepterror.h  defines.h  dto.h  protocol.cpp  protocol.h  protocolerror.h  resolver.cpp  resolver.h  socket.cpp  socket.h
installer/: dune_client  dune_editor  dune_server
maps/: 2play1.yaml  2play2.yaml  2play3.yaml  3play1.yaml  4play1.yaml  4play2.yaml  Mapa 1.yaml  Mapa 2.yaml  Prueba Editor.yaml
server/: CMakeLists.txt  ctrlhilos.cpp  ctrlhilos.h  gamecontainer.cpp  gamecontainer.h  games.cpp  games.h  serverprotocol.cpp  serverprotocol.h  serverqueue.cpp  serverqueue.h  smsg.h  smsgatacar.cpp  smsgatacar.h  smsgconstruir.cpp  smsgconstruir.h  smsgcrearunidad.cpp  smsgcrearunidad.h  smsgdestruir.cpp  smsgdestruir.h  smsgforcedend.cpp  smsgforcedend.h  smsgmover.cpp  smsgmover.h  thbroadcaster.cpp  thbroadcaster.h  thclienthandler.cpp  thclienthandler.h  thcmdexecutor.cpp  thcmdexecutor.h  thgameloop.cpp  thgameloop.h  thgamestatus.cpp  thgamestatus.h  thread.cpp  thread.h
server/model/: astar.cpp  astar.h  building.cpp  building.h  cell.h  config.cpp  config.h  game.cpp  game.h  guns.cpp  guns.h  harvester.cpp  harvester.h  map.cpp  map.h  movable.cpp  movable.h  onhold.cpp  onhold.h  playerinfo.cpp  playerinfo.h  positonable.h  targetable.h  unit.cpp  unit.h  worm.cpp  worm.h
src_editor/: CMakeLists.txt  crearMenu.cpp  crearMenu.h  createFileMap.cpp  createFileMap.h  editarMenu.cpp  editarMenu.h  editor.cpp  editor.h  mapWidget.cpp  mapWidget.h  piecesMap.cpp  piecesMap.h
tests/: CMakeLists.txt
tests/server/model/: CMakeLists.txt  test_game.cpp  test_map.cpp
